# conceptnet-rocks

./: README.md  pyproject.toml
a_conceptnet/: arangodb.py  cli.py  database.py
a_conceptnet/conceptnet5/: edges.py  nodes.py  prepare_data.py
conceptnet_rocks/: __init__.py  arangodb.py  cli.py  database.py
conceptnet_rocks/conceptnet5/: edges.py  nodes.py  prepare_data.py  relations.py
